# pretrade-market-data-integrity-engine

./: .gitignore  README.md  REFERENCES.md  pyproject.toml  requirements.txt  run_pipeline.py
extensions/: extensions_notes.py
pipeline/: __init__.py  corporate_actions.py  dashboard.py  gaps.py  loader.py  outliers.py  quality.py  report.py  returns.py  validator.py
tests/: test_corporate_actions.py  test_gaps.py  test_loader.py  test_outliers.py  test_quality.py  test_returns.py  test_validator.py
